@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - EXPERIMENTAL ExtUtils::MakeMaker fixes for dynamic prereqs on windows
+  - restore FFI_PLATYPUS_DEBUG_FAKE32
+  - restore FFI_PLATYPUS_NO_ALLOCA
 
 0.65_01   2019-01-04 13:38:58 -0500
   - EXPERIMENTAL ExtUtils::MakeMaker fixes for parallel and freebsd build
